<resources>
    <string name="app_name">GithubSearchRepository</string>
    <string name="info">Info</string>
    <string name="search">Search</string>
    <string name="hint_text_field">Type name of repository…</string>
    <string name="language">Language: %s</string>
    <string name="last_update">Last update: %s</string>
    <string name="star_count">Star count: %s</string>
    <string name="link">Link: %s</string>
    <string name="following">Following: %s</string>
    <string name="followers">Followers: %s</string>
    <string name="biography">Biography: %s</string>
    <string name="nickname">Nickname: %s</string>
</resources>